--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,8 @@
     "@mikro-orm/knex": "6.4.16",
     "@mikro-orm/migrations": "6.4.16",
     "@mikro-orm/postgresql": "6.4.16",
+    "@react-email/components": "^1.0.3",
+    "@stellar/stellar-sdk": "^13.1.0",
     "algoliasearch": "^5.44.0",
     "awilix": "^8.0.1",
     "express": "^4.21.2",
@@ -57,8 +59,8 @@
     "my-plugin": "file:.yalc/my-plugin",
     "pg": "^8.13.0",
     "qrcode": "^1.5.4",
+    "resend": "^6.6.0",
     "stripe": "^17.7.0",
-    "@stellar/stellar-sdk": "^13.1.0",
     "ulid": "^2.3.0",
     "zod": "^3.25.76"
   },
