--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -1,6 +1,12 @@
 {
   "name": "@medusajs/dashboard",
   "version": "2.10.3",
+  "pnpm": {
+    "overrides": {
+      "glob": ">=10.5.0",
+      "qs": ">=6.14.1"
+    }
+  },
   "scripts": {
     "generate:static": "node ./scripts/generate-currencies.js && prettier --write ./src/lib/currencies.ts",
     "dev": "vite",
