--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,13 @@
     "headless",
     "medusa"
   ],
+  "pnpm": {
+    "overrides": {
+      "glob": ">=10.5.0",
+      "qs": ">=6.14.1",
+      "jws": ">=3.2.3"
+    }
+  },
   "scripts": {
     "build": "medusa build",
     "ib": "init-backend",
