--- a/storefront/package.json
+++ b/storefront/package.json
@@ -11,7 +11,8 @@
     "lint": "next lint"
   },
   "resolutions": {
-    "glob": ">=10.5.0"
+    "glob": ">=10.5.0",
+    "qs": ">=6.14.1"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
@@ -47,13 +48,13 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
     "@eslint/eslintrc": "^3",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/nextjs": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/test": "^8.4.7",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-onboarding": "^8.6.15",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/nextjs": "^8.6.15",
+    "@storybook/react": "^8.6.15",
+    "@storybook/test": "^8.6.15",
     "@types/dompurify": "^3.2.0",
     "@types/lodash": "^4.17.15",
     "@types/node": "^20",
@@ -63,7 +64,7 @@
     "eslint-config-next": "15.1.4",
     "eslint-plugin-storybook": "^0.11.2",
     "postcss": "^8",
-    "storybook": "^8.4.7",
+    "storybook": "^8.6.15",
     "storybook-next-intl": "^1.2.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
