--- a/vendor-panel/package.json
+++ b/vendor-panel/package.json
@@ -1,6 +1,12 @@
 {
   "name": "vendor-panel",
   "version": "1.0.0",
+  "pnpm": {
+    "overrides": {
+      "glob": ">=10.5.0",
+      "qs": ">=6.14.1"
+    }
+  },
   "scripts": {
     "generate: static": "node ./scripts/generate-currencies.js && prettier --write ./src/lib/currencies.ts",
     "wait": "echo 'Backend check handled by launch-vendor. js'",
