--- a/storefront/package.json
+++ b/storefront/package.json
@@ -31,6 +31,7 @@
     "i18next-browser-languagedetector": "^8.1.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.562.0",
     "medusajs-launch-utils": "^0.0.18",
     "next": "^15.1.6",
     "next-intl": "^3.26.3",
