--- a/vendor-panel/package.json
+++ b/vendor-panel/package.json
@@ -19,7 +19,7 @@
     "test": "vitest --run",
     "i18n:validate": "node ./scripts/i18n/validate-translation.js",
     "i18n:schema": "node ./scripts/i18n/generate-schema.js",
-    "lint": "eslint .  --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .  --ext ts,tsx --max-warnings 0",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit"
   },
@@ -102,11 +102,13 @@
     "@vitejs/plugin-react": "4.2.1",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.17",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.4.33",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.1",
     "tsup": "^8.0.2",
     "typescript": "5.2.2",
+    "typescript-eslint": "^8.54.0",
     "vite": "^5.4.14",
     "vite-plugin-inspect": "^0.8.7",
     "vitest": "^3.0.5"
