--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,44 @@ jobs:
       - name: TypeScript check
         working-directory: backend
         run: pnpm exec tsc --noEmit
-        continue-on-error: true
+
+  # ============================================
+  # Vendor Panel Checks
+  # ============================================
+  vendor-panel:
+    name: Vendor Panel Checks
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+          cache-dependency-path: vendor-panel/pnpm-lock.yaml
+
+      - name: Install vendor-panel dependencies
+        working-directory: vendor-panel
+        run: pnpm install --frozen-lockfile
+
+      - name: Lint vendor panel
+        working-directory: vendor-panel
+        run: pnpm lint
+
+      - name: Typecheck vendor panel
+        working-directory: vendor-panel
+        run: pnpm typecheck
+
+      - name: Build vendor panel preview
+        working-directory: vendor-panel
+        run: pnpm build:preview
 
   # ============================================
   # Unit Tests
@@ -77,7 +114,6 @@ jobs:
         run: pnpm test:unit
         env:
           NODE_ENV: test
-        continue-on-error: true
 
   # ============================================
   # Build Check
@@ -85,7 +121,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs: [lint, vendor-panel]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -142,12 +178,10 @@ jobs:
       - name: Audit backend dependencies
         working-directory: backend
         run: pnpm audit --audit-level=high
-        continue-on-error: true
 
       - name: Audit storefront dependencies
         working-directory: storefront
         run: pnpm audit --audit-level=high
-        continue-on-error: true
 
   # ============================================
   # Integration Tests (on main only)
@@ -211,7 +245,6 @@ jobs:
           REDIS_URL: redis://localhost:6379
           JWT_SECRET: test-jwt-secret-at-least-32-characters-long
           COOKIE_SECRET: test-cookie-secret-at-least-32-chars
-        continue-on-error: true
 
   # ============================================
   # Deploy Notification (on main push)
@@ -219,7 +252,7 @@ jobs:
   notify-deploy:
     name: Deployment Ready
     runs-on: ubuntu-latest
-    needs: [build, test-unit, security]
+    needs: [build, test-unit, security, vendor-panel]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Deployment notification
