--- a/storefront/package.json
+++ b/storefront/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.1",
     "@hookform/resolvers": "^3.10.0",
+    "@medusajs/icons": "^2.13.1",
     "@medusajs/js-sdk": "^2.12.5",
     "@medusajs/types": "^2.12.5",
     "@medusajs/ui": "^4.0.28",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
+    "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.5.2",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
