--- a/storefront/package.json
+++ b/storefront/package.json
@@ -32,6 +32,7 @@
     "embla-carousel-react": "^8.5.2",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
+    "instantsearch.js": "^4.83.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.562.0",
