--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "@medusajs/core-flows": "2.12.5",
     "@medusajs/framework": "2.12.5",
     "@medusajs/icons": "2.12.5",
+    "@medusajs/js-sdk": "2.12.5",
     "@medusajs/order": "2.12.5",
     "@medusajs/product": "2.12.5",
     "@medusajs/ui": "4.0.28",
@@ -62,6 +63,7 @@
     "@mikro-orm/postgresql": "6.4.16",
     "@react-email/components": "^1.0.3",
     "@stellar/stellar-sdk": "^13.1.0",
+    "@tanstack/react-query": "5.64.2",
     "@types/bcryptjs": "^3.0.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.2",
     "algoliasearch": "^5.44.0",
@@ -107,6 +109,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6.20.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.2.11",
