--- a/vendor-panel/package.json
+++ b/vendor-panel/package.json
@@ -6,10 +6,12 @@
       "axios": ">=1.13.5",
       "glob": ">=10.5.0",
       "qs": ">=6.14.2",
-      "@remix-run/router": ">=1.23.2",
-      "react-router": ">=6.30.2",
+      "@remix-run/router": "1.23.2",
+      "react-router": "6.30.2",
       "@medusajs/framework": "2.12.5",
-      "lodash": ">=4.17.23"
+      "lodash": ">=4.17.23",
+      "nodemailer": ">=7.0.11",
+      "@isaacs/brace-expansion": ">=5.0.1"
     }
   },
   "scripts": {
