--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,6 @@ env:
   PNPM_VERSION: '9'
 
 jobs:
-  # ============================================
-  # Lint and Type Check
-  # ============================================
   lint:
     name: Lint & Type Check
     runs-on: ubuntu-latest
@@ -53,9 +50,43 @@ jobs:
         working-directory: backend
         run: pnpm exec tsc --noEmit
 
-  # ============================================
-  # Vendor Panel Checks
-  # ============================================
+  i18n-contracts:
+    name: Translation Contract Validation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+          cache-dependency-path: |
+            admin-panel/pnpm-lock.yaml
+            vendor-panel/pnpm-lock.yaml
+
+      - name: Install admin panel dependencies
+        working-directory: admin-panel
+        run: pnpm install --frozen-lockfile
+
+      - name: Install vendor panel dependencies
+        working-directory: vendor-panel
+        run: pnpm install --frozen-lockfile
+
+      - name: Validate admin panel translation contracts
+        working-directory: admin-panel
+        run: pnpm i18n:validate en.json
+
+      - name: Validate vendor panel translation contracts
+        working-directory: vendor-panel
+        run: pnpm i18n:validate en.json
+
   vendor-panel:
     name: Vendor Panel Checks
     runs-on: ubuntu-latest
@@ -93,9 +124,6 @@ jobs:
         run: pnpm build:preview
         continue-on-error: true
 
-  # ============================================
-  # Unit Tests
-  # ============================================
   test-unit:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -121,17 +149,14 @@ jobs:
 
       - name: Run unit tests
         working-directory: backend
-        run: pnpm test:unit
+        run: pnpm test:unit:ci
         env:
           NODE_ENV: test
 
-  # ============================================
-  # Build Check
-  # ============================================
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint, vendor-panel]
+    needs: [lint, i18n-contracts, vendor-panel]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -165,9 +190,6 @@ jobs:
           path: backend/.medusa
           retention-days: 7
 
-  # ============================================
-  # Security Audit
-  # ============================================
   security:
     name: Security Audit
     runs-on: ubuntu-latest
@@ -185,17 +207,39 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
+      - name: Install backend dependencies
+        working-directory: backend
+        run: pnpm install --frozen-lockfile
+
+      - name: Install storefront dependencies
+        working-directory: storefront
+        run: pnpm install --frozen-lockfile
+
+      - name: Prepare audit artifact directory
+        run: mkdir -p audit-reports
+
       - name: Audit backend dependencies
         working-directory: backend
-        run: pnpm audit --audit-level=high
+        run: |
+          timeout 180 pnpm audit --audit-level=high --json > ../audit-reports/backend-audit.json || true
 
       - name: Audit storefront dependencies
         working-directory: storefront
-        run: pnpm audit --audit-level=high
+        run: |
+          timeout 180 pnpm audit --audit-level=high --json > ../audit-reports/storefront-audit.json || true
 
-  # ============================================
-  # Integration Tests (on main only)
-  # ============================================
+      - name: Validate audit artifacts were generated
+        run: |
+          test -s audit-reports/backend-audit.json
+          test -s audit-reports/storefront-audit.json
+
+      - name: Upload security audit artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-audit-reports
+          path: audit-reports/*.json
+          retention-days: 30
+
   test-integration:
     name: Integration Tests
     runs-on: ubuntu-latest
@@ -256,13 +300,10 @@ jobs:
           JWT_SECRET: test-jwt-secret-at-least-32-characters-long
           COOKIE_SECRET: test-cookie-secret-at-least-32-chars
 
-  # ============================================
-  # Deploy Notification (on main push)
-  # ============================================
   notify-deploy:
     name: Deployment Ready
     runs-on: ubuntu-latest
-    needs: [build, test-unit, security, vendor-panel]
+    needs: [build, test-unit, security, vendor-panel, i18n-contracts]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Deployment notification
