--- a/vendor-panel/tsconfig.json
+++ b/vendor-panel/tsconfig.json
@@ -5,16 +5,12 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Path aliases */
     "baseUrl": ".",
     "paths": {
       "@custom-types/*": ["src/types/*"],
@@ -28,14 +24,18 @@
       "@providers/*": ["src/providers/*"],
       "@/*": ["src/*"]
     },
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "strict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "src/types/domain/index.ts"],
+  "include": [
+    "src/i18n/**/*.ts",
+    "src/i18n/**/*.json",
+    "src/types/**/*.ts",
+    "src/types/**/*.tsx",
+    "src/extensions/types.ts"
+  ],
+  "exclude": ["**/*.spec.ts", "**/*.spec.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
-
